2025-10-04T01:26:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18237609216 # 1261
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-04
* notice: last 14d: unq all: 33 58
* notice: prev accum: outdated-unq outdated-all / unq all: 4801 9696 / 4851 9752
* notice: next accum: outdated-unq outdated-all / unq all: 4804 9700 / 4856 9758
* notice: prev exec diff / last date diff / accum: unq all: +5 +6 -0 -0 / +6 +7 -0 -0 / 6 7
* notice: removed / changed dates: [2025-09-19] / [2025-10-03]

2025-10-03T12:41:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18222523970 # 1260
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-03
* notice: last 14d: unq all: 30 54
* notice: prev accum: outdated-unq outdated-all / unq all: 4801 9696 / 4850 9751
* notice: next accum: outdated-unq outdated-all / unq all: 4801 9696 / 4851 9752
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-09-19 2025-10-03]

2025-10-03T01:36:29Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18210347036 # 1259
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-03
* notice: last 14d: unq all: 30 54
* notice: prev accum: outdated-unq outdated-all / unq all: 4801 9696 / 4849 9750
* notice: next accum: outdated-unq outdated-all / unq all: 4801 9696 / 4850 9751
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +6 +7 -0 -0 / 6 7
* notice: removed / changed dates: [] / [2025-09-19 2025-10-02]

2025-10-02T12:40:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18193245278 # 1258