@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-10-04T01:26:15Z",
+  "timestamp" : "2025-10-04T12:37:33Z",
   "count_outdated" : 9700,
   "uniques_outdated" : 4804,
-  "count" : 9758,
-  "uniques" : 4856,
+  "count" : 9759,
+  "uniques" : 4857,
   "clones" : [
     {
       "timestamp": "2025-09-20T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 6,
       "uniques_minmax": [ 1, 6 ],
       "uniques_decinc": [ 0, 6 ]
+    },
+    {
+      "timestamp": "2025-10-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
