@@ -1,5 +1,5 @@
 {
-  "count": 58,
+  "count": 59,
   "uniques": 33,
   "clones": [
     {
@@ -71,6 +71,11 @@
       "timestamp": "2025-10-03T00:00:00Z",
       "count": 7,
       "uniques": 6
+    },
+    {
+      "timestamp": "2025-10-04T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
