@@ -1,3 +1,12 @@
+2025-10-04T12:37:33Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18244396854 # 1262
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-04
+* notice: last 14d: unq all: 33 59
+* notice: prev accum: outdated-unq outdated-all / unq all: 4804 9700 / 4856 9758
+* notice: next accum: outdated-unq outdated-all / unq all: 4804 9700 / 4857 9759
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-10-04]
+
 2025-10-04T01:26:15Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18237609216 # 1261
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-04
